feat: added page title and favicon links

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal taste and nutritional needs."
+    />
     <!-- Always include this line of code -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- Website favicon -->
+    <link rel="icon" href="img/favicon.png" />
+    <!-- For adding the website as an icon to the IOS home screen -->
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <!-- For adding the website as an icon to the android home screen -->
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,7 +38,7 @@
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
     <script defer src="js/script.js"></script>
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again</title>
   </head>
 
   <!-- BODY SECTION -->
@@ -655,8 +664,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; <span class="year">2025</span> by Omnifood, Inc.
-            All rights reserved.
+            Copyright &copy; <span class="year">2025</span> Made by Lemayian
+            with ♥️. All rights reserved.
           </p>
         </div>
         <div class="address-col">
